# raytracing-in-one-weekend

./: .clangd  .gitignore  10.ppm  9.ppm  CMakeLists.txt  Makefile  README.md  build-and-run.bat  build-and-run.sh  implementation_plan.md  walkthrough.md
.cache/clangd/index/: color.h.E8B3895AFA091BCE.idx  hittable.h.5EFE5C2B5BE58923.idx  hittable_list.h.CA89DF8AFD7258C6.idx  interval.h.46E83A1FBBAF5AB2.idx  main.cpp.B22463F144FA4A6F.idx  ray.h.1BC2DD670878C303.idx  rtweekend.h.22F84D842EC88309.idx  sphere.h.56A7836080179EEA.idx  vec3.h.17905D9925B9F84D.idx
imgs/: 12.ppm  7.ppm
src/: camera.h  color.h  cuda_utils.h  hittable.h  hittable_list.h  image_texture.h  interval.h  main.cpp  main.cu  material.h  ray.h  rtweekend.h  sphere.h  texture.h  vec3.h
